# Pirate-MIDI-Updater

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
src/: App.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Asset.ts  ConnectedDevice.ts  ConnectedDeviceType.ts  DeviceDetails.ts  InstallProgress.ts  InstallStatus.ts  InstallerState.ts  Release.ts
src-tauri/icons/: icon.icns
src-tauri/src/: bootloader.rs  device.rs  dfu.rs  error.rs  github.rs  install.rs  main.rs  state.rs  usb.rs  validation.rs
src-tauri/src/commands/: dfu.rs  github.rs  install.rs  mod.rs
src-tauri/src/device/: bootloader.rs  mod.rs  windows.rs
src-tauri/src/usb/: device.rs  mod.rs  observer.rs  watcher.rs
src-tauri/wix/: README.md  drivers.wxs
src-tauri/wix/drivers/: PM_Bridge_Bootloader.inf  PM_CLiCK.inf  PM_CLiCK_Bootloader.inf  pm_bootloader.inf  pm_click_serial.inf
src/components/: BridgeModal.tsx  DeviceInfo.tsx  DeviceInfoBar.tsx  DeviceLogo.tsx  DiagnosticImageModal.tsx  IncompatableModal.tsx  InstallBar.tsx  Placeholder.tsx  ProgressBar.tsx  ReleaseInfo.tsx  ReleaseInfoBar.tsx  ReleaseList.tsx  ReleaseListColumn.tsx
src/pages/: _app.tsx  index.tsx
src/pages/bridge/: index.tsx
src/pages/click/: index.tsx
src/pages/devices/: index.tsx
src/pages/install/: index.tsx
src/pages/postinstall/: index.tsx
src/pages/releases/: index.tsx
src/pages/uloop/: index.tsx
updater/: Cargo.toml
updater/src/: main.rs
