[package]
name = "ahoy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "shell-open", "updater"] }
reqwest = { version = "0.11", features = ["json"] }
dfu-libusb = "0.4"
pirate-midi-rs = "1.2"
thiserror = "1.0"
log = "0.4"
rusb = { version = "0.9.1", features = ["vendored"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
usb_enumeration = "0.2.0"
futures = "0.3.26"
tauri-api = "0.7.6"
ts-rs = "6.2.1"
serialport = "4.2.0"
sysinfo = "0.28.0"
fs_extra = "1.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
