[package]
name = "ahoy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "shell-open", "updater"] }
reqwest = { version = "0.11", features = ["json"] }
dfu-libusb = "0.4"
pirate-midi-rs = { git = "https://github.com/beckler/pirate-midi-rs" }
thiserror = "1.0"
log = "0.4"
rusb = { version = "0.9.1", features = ["vendored"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
usb_enumeration = { git = "https://github.com/beckler/usb_enumeration" }
futures = "0.3.26"
ts-rs = "6.2.1"
serialport = { git = "https://github.com/beckler/serialport-rs" }
sysinfo = "0.28.0"
fs_extra = "1.3.0"
versions = "4.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
