[package]
name = "ahoy"
version = "0.0.0"
authors = ["Ahoy Contributors"]
description = "The cross-platform firmware installer for Pirate MIDI devices!"
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "shell-open", "updater"] }
reqwest = { version = "0.11", features = ["json"] }
dfu-libusb = "0.5"
pirate-midi-rs = { git = "https://github.com/beckler/pirate-midi-rs" }
thiserror = "1.0"
log = "0.4"
rusb = { version = "0.9.1", features = ["vendored"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
usb_enumeration = { git = "https://github.com/beckler/usb_enumeration" }
futures = "0.3.26"
ts-rs = "6.2.1"
serialport = { git = "https://github.com/beckler/serialport-rs" }
sysinfo = "0.29.4"
fs_extra = "1.3.0"
semver = "1.0.16"
sentry = "0.31"
sentry-tauri = "0.2.0"
sentry-log = "0.31.5"
backoff = "0.4.0"
simplelog = "0.12.1"
chrono = "0.4.24"
open = "5.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
